--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,7 @@
         "symfony/property-access": "^5.1",
         "symfony/property-info": "^5.1",
         "laminas/laminas-eventmanager": "^3.3",
-        "doctrine/doctrine-orm-module": "^2.1.7",
+        "doctrine/doctrine-orm-module": "*",
         "ngonam22/st-common-service": "^1.0.0"
     },
     "autoload": {
