--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,7 @@
         "symfony/serializer": "^4.4.16",
         "symfony/property-access": "^4.4.16",
         "symfony/property-info": "^4.4.16",
-        "doctrine/doctrine-orm-module": "*",
-        "ngonam22/st-common-service": "^1.0.1"
+        "doctrine/doctrine-orm-module": "*"
     },
     "autoload": {
         "psr-4": {
